--- a/.github/workflows/html_to_sb3_conversion.yml
+++ b/.github/workflows/html_to_sb3_conversion.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Replace 'x' with your desired Python version
+          python-version: '3.x'  # Replace 'x' with your currently installed Python version
 
       - name: Install dependencies
         run: pip install -r requirements.txt
